# libmemmap

./: .gitignore  README.md  meson.build
include/memmap/: conf.h  iter.h  proc.h
include/sys/: mman.h
samples/: memdump.cpp  memtest.cpp
src/: dbg.h  map.cpp  mem.cpp  shm.cpp
